fix whitespace, implement CreateTemplate
